test/scc/expr/semantic-errors/165.a
165.t:4:18: error: invalid initializer